tui/src/snapshots/lp_diff__snapshot_tests__snapshot_diagnostics_pane_120x40.snap
---
source: tui/src/snapshot_tests.rs
expression: "render(&mut app, 120, 40).backend()"
---
" 1 Summary │ 2 Variables (2) │ 3 Constraints (2) │ 4 Objectives (1) │ 5 Numerics !1                                     "
"╭ Diagnostics  (Esc:close) ────────────────────────────────────────────────────────────────────────────────────────────╮"
"│  Verdict ────────────────────────────────────────────                                                                │"
"│  No solve yet — press S to solve, then reopen for a reading                                                          │"
"│                                                                                                                      │"
"│  Solve ──────────────────────────────────────────────                                                                │"
"│  no solve recorded yet                                                                                               │"
"│                                                                                                                      │"
"│  Model ──────────────────────────────────────────────                                                                │"
"│  size                  2 rows × 2 cols, 4 nonzeros (100.00% dense)                                                   │"
"│  matrix range          [1e0, 1e0]  ratio 1e0                                                                         │"
"│  cost range            [2e0, 3e0]  ratio 2e0                                                                         │"
"│  rhs range             [2e0, 8e0]  ratio 4e0                                                                         │"
"│  bound range           [1e1, 1e1]  ratio 1e0                                                                         │"
"│                                                                                                                      │"
"│  Worst-conditioned constraints ──────────────────────                                                                │"
"│  coefficient spread within the row                                                                                   │"
"│  constraint                   nnz      ratio          rhs         dual  state                                        │"
"│  c1                             2     1.00e0       2.0000            —                                               │"
"│  c2                             2     1.00e0       8.0000            —                                               │"
"│                                                                                                                      │"
"│  Worst-conditioned variables ────────────────────────                                                                │"
"│  coefficient spread down the column                                                                                  │"
"│  variable                    rows      ratio        value    red. cost  state                                        │"
"│  x                              2     1.00e0            —            —                                               │"
"│  y                              2     1.00e0            —            —                                               │"
"│                                                                                                                      │"
"│  Densest constraints ────────────────────────────────                                                                │"
"│  cost per iteration, not iteration count                                                                             │"
"│  constraint                   nnz      ratio          rhs         dual  state                                        │"
"│  c1                             2     1.00e0       2.0000            —                                               │"
"│  c2                             2     1.00e0       8.0000            —                                               │"
"│                                                                                                                      │"
"│  Densest variables ──────────────────────────────────                                                                │"
"│  cost per iteration, not iteration count                                                                             │"
"│  variable                    rows      ratio        value    red. cost  state                                        │"
"│  x                              2     1.00e0            —            —                                               │"
"│  y                              2     1.00e0            —            —                                               │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
" model.lp  │  5 entries                                                         j/k:scroll · PgDn/PgUp:page · Esc:close "
