tui/src/snapshots/lp_diff__snapshot_tests__snapshot_diff_constraints_80x24.snap
---
source: tui/src/snapshot_tests.rs
expression: "render(&mut app, 80, 24).backend()"
---
" Summary │ Variables │ Constraints +1 -1 ~1 │ Objectives ~1 │ Numerics          "
"╭ 1/3 constraints ─┬ Constraint: c1 [Modified] · r:raw ────────────────────────╮"
"│▍ [~] c1          │  Location: L4 / L4                                        │"
"│  [-] c2          │  RHS:      2  →  3                                        │"
"│  [+] c3          │                                                           │"
"│                  │  Coefficients:                                            │"
"│                  │  Variable Old  New                                        │"
"│                  │  x          1    1                                        │"
"│                  │  y          1    1                                        │"
"│                  │                                                           │"
"│                  │                                                           │"
"│                  │                                                           │"
"│                  │                                                           │"
"│                  │                                                           │"
"│                  │                                                           │"
"│                  │                                                           │"
"│                  │                                                           │"
"│                  │                                                           │"
"│                  │                                                           │"
"│                  │                                                           │"
"│                  │                                                           │"
"│                  │                                                           │"
"╰──────────────────┴───────────────────────────────────────────────────────────╯"
" 4 changes  │  +1 -1 ~1 >0  │  filter:All (3)        E:what-if · r:raw · ?:help "
