tui/src/snapshots/lp_diff__snapshot_tests__snapshot_diff_constraints_filtered_80x24.snap
---
source: tui/src/snapshot_tests.rs
expression: "render(&mut app, 80, 24).backend()"
---
" 1 Sum │ 2 Vars ~0/2 │ 3 Cons ~1/3 │ 4 Objs ~1/1 │ 5 Num                        "
"╭ 1/1 constraints ─┬ Constraint: c1 [Modified] · r:raw ────────────────────────╮"
"│▍ [~] c1          │  Location: L4 / L4                                        │"
"│                  │  RHS:      2  →  3                                        │"
"│                  │                                                           │"
"│                  │  Coefficients:                                            │"
"│                  │  Variable Old  New                                        │"
"│                  │  x          1    1                                        │"
"│                  │  y          1    1                                        │"
"│                  │                                                           │"
"│                  │                                                           │"
"│                  │                                                           │"
"│                  │                                                           │"
"│                  │                                                           │"
"│                  │                                                           │"
"│                  │                                                           │"
"│                  │                                                           │"
"│                  │                                                           │"
"│                  │                                                           │"
"│                  │                                                           │"
"│                  │                                                           │"
"│                  │                                                           │"
"╰──────────────────┴───────────────────────────────────────────────────────────╯"
" 4 changes  │  +1 -1 ~1 >0  │  filter:Modified (1)      a:clear filter · ?:help "
