tui/src/snapshots/lp_diff__snapshot_tests__snapshot_diff_empty_detail_cheatsheet_80x24.snap
---
source: tui/src/snapshot_tests.rs
expression: "render(&mut app, 80, 24).backend()"
---
" Summary │ Variables │ Constraints +1 -1 ~1 │ Objectives ~1 │ Numerics          "
"╭ 0/0 variables ───┬ Detail ───────────────────────────────────────────────────╮"
"│                  │  Select a variable from the list                          │"
"│                  │                                                           │"
"│                  │  j/k Enter   navigate the list, open detail               │"
"│                  │  /           search all sections                          │"
"│                  │  E           what-if: edit constraint RHS & re-solve      │"
"│                  │  r           toggle raw text side-by-side view            │"
"│                  │  +/-/m/=/a   filter by change kind                        │"
"│                  │  s           sort by delta magnitude                      │"
"│                  │  yy/yo/yn    yank name / old side / new side              │"
"│                  │  S           solve with HiGHS                             │"
"│                  │  w           export CSV                                   │"
"│                  │                                                           │"
"│                  │  Ctrl-p ?    command palette, full keybindings            │"
"│                  │                                                           │"
"│                  │                                                           │"
"│                  │                                                           │"
"│                  │                                                           │"
"│                  │                                                           │"
"│                  │                                                           │"
"│                  │                                                           │"
"╰──────────────────┴───────────────────────────────────────────────────────────╯"
" 4 changes  │  +0 -0 ~0 >0  │  filter:All (0)               j/k:scroll · ?:help "
