tui/src/snapshots/lp_diff__snapshot_tests__snapshot_diff_summary_80x24.snap
---
source: tui/src/snapshot_tests.rs
expression: "render(&mut app, 80, 24).backend()"
---
" 1 Summary │ 2 Variables │ 3 Constraints +1 -1 ~1 │ 4 Objectives ~1 │ 5 Numerics"
"╭ Overview ────────┬ Summary ──────────────────────────────────────────────────╮"
"│  Variables      0│  a.lp  →  b.lp                                            ┃"
"│  Constraints    3│                                                           ┃"
"│  Objectives     1│  Section        Added Removed Modified Entries            ┃"
"│                  │  ─────────────────────────────────────────────            ┃"
"│                  │  Variables          0       0        0       2            ┃"
"│                  │  Constraints        1       1        1       3            │"
"│                  │  Objectives         0       0        1       1            │"
"│                  │  ─────────────────────────────────────────────            │"
"│                  │  TOTAL              1       1        2       6            │"
"│                  │                                                           │"
"│                  │  Problem Dimensions ─────────────────────────────────     │"
"│                  │                          File A      File B       Delta   │"
"│                  │  ──────────────────────────────────────────────────────   │"
"│                  │  Variables                    2           2           —   │"
"│                  │  Constraints                  2           2           —   │"
"│                  │  Non-zeros                    4           4           —   │"
"│                  │  Density                100.00%     100.00%           —   │"
"│                  │  Vars/constraint            2–2         2–2               │"
"│                  │                                                           │"
"│                  │  Variable Types ─────────────────────────────────────     │"
"╰──────────────────┴───────────────────────────────────────────────────────────╯"
" 4 changes  │  +1 -1 ~2 >0  │  filter:All (0)    1-5:section · S:solve · ?:help "
