tui/src/snapshots/lp_diff__snapshot_tests__snapshot_help_overlay_80x24.snap
---
source: tui/src/snapshot_tests.rs
expression: "render(&mut app, 80, 24).backend()"
---
"╭ Keybindings  (j/k:scroll · Esc:close) ───────────────────────────────────────╮"
"│                                                                              │"
"│  Single-file inspect mode                                                    │"
"│  ───────────────────────                                                     │"
"│                                                                              │"
"│  Navigation                                      Other                       │"
"│  ─────────                                       ─────                       │"
"│  j / ↓            Down                           /       Search              │"
"│  k / ↑            Up                             Ctrl-p  Command palette     │"
"│  g / Home         Top                            ?       This help           │"
"│  G / End          Bottom                         q       Quit                │"
"│  [ / ]            Prev/next section              Ctrl-C  Force quit          │"
"│  n / N            Next / prev match                                          │"
"│  Ctrl-d / Ctrl-u  Half page ↓ / ↑                Clipboard                   │"
"│  Ctrl-f / Ctrl-b  Full page ↓ / ↑                ─────────                   │"
"│  Ctrl-o / Ctrl-i  Jump back / forward            yy      Yank name           │"
"│  Tab / ⇧Tab       Next / prev panel              Y       Yank detail         │"
"│  Enter            Go to detail                   w       Export CSV          │"
"│  h / l            Sidebar / Detail                                           │"
"│  1–5              Jump to section (5: Numerics)                              │"
"│  Esc              Back                                                       │"
"│  < / >            Narrow / widen the sidebar                                 │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
