tui/src/snapshots/lp_diff__snapshot_tests__snapshot_highs_presolve_pane_120x40.snap
---
source: tui/src/snapshot_tests.rs
expression: "render(&mut app, 120, 40).backend()"
---
" 1 Summary │ 2 Variables (3) │ 3 Constraints (3) │ 4 Objectives (1) │ 5 Numerics !1                                     "
"╭ Overview ────────┬ Summary ──────────────────────────────────────────────────────────────────────────────────────────╮"
"│  2 Variables    3│  model.lp                                                                                         ┃"
"│  3 Constraints  3│  Name:   (unnamed)                                                                                ┃"
"│  4 Objectives   1│  Sense:  Minimize                                                                                 ┃"
"│                  │                                                                                                   ┃"
"│                  │  Model Contents ─────────────────────────────────────                                             ┃"
"│                  │  Variables                3                                                                       ┃"
"│                  │  Constraints              3                                                                       ┃"
"│                  │  Objectives               1                                                                       ┃"
"│                  │                                                                                                   ┃"
"│                  │  Problem Dimensions ─────────────────────────────────                                             ┃"
"╭ Presolve log  (j/k:scroll · w:write .txt · Esc:close) ───────────────────────────────────────────────────────────────╮"
"│  HiGHS presolve: solved the model outright — nothing left, 0.0ms                                                     │"
"│  3 rows, 3 cols in → 0 rows, 0 cols out                                                                              │"
"│                                                                                                                      │"
"│  3 rows removed                                                                                                      │"
"│                                                                                                                      │"
"│  c1                                                                                                                  │"
"│  c2                                                                                                                  │"
"│  c3                                                                                                                  │"
"│                                                                                                                      │"
"│  3 columns removed                                                                                                   │"
"│                                                                                                                      │"
"│  x                                                                                                                   │"
"│  y                                                                                                                   │"
"│  z                                                                                                                   │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"│                  │                                                                                                   │"
"│                  │  Constraint Types ───────────────────────────────────                                             │"
"│                  │  Equality (=)                   0                                                                 │"
"│                  │  <= constraints                 2                                                                 │"
"│                  │  >= constraints                 1                                                                 │"
"│                  │  < constraints                  0                                                                 │"
"│                  │  > constraints                  0                                                                 │"
"│                  │  SOS1                           0                                                                 │"
"│                  │  SOS2                           0                                                                 │"
"│                  │                                                                                                   │"
"╰──────────────────┴───────────────────────────────────────────────────────────────────────────────────────────────────╯"
" model.lp  │  7 entries                                                           j/k:scroll · w:write .txt · Esc:close "
