tui/src/snapshots/lp_diff__snapshot_tests__snapshot_iis_pane_120x40.snap
---
source: tui/src/snapshot_tests.rs
expression: "render(&mut app, 120, 40).backend()"
---
" 1 Summary │ 2 Variables (2) │ 3 Constraints (3) │ 4 Objectives (1) │ 5 Numerics !1                                     "
"╭ Irreducible infeasible subsystem  (w:write · Esc:close) ─────────────────────────────────────────────────────────────╮"
"│  2 row(s) and 1 bound(s) that cannot hold together                                                                   │"
"│  no proper subset of these is infeasible: relaxing any one of them removes this conflict                             │"
"│  (the elastic diagnosis on a solve, `e`, answers the different question of which is cheapest to relax)               │"
"│                                                                                                                      │"
"│  Constraints ────────────────────────────────────────                                                                │"
"│  name                         bound                                                                                  │"
"│  c1                           lower                                                                                  │"
"│  c2                           upper                                                                                  │"
"│                                                                                                                      │"
"│  Variable bounds ────────────────────────────────────                                                                │"
"│  name                         bound                                                                                  │"
"│  x                            lower                                                                                  │"
"│                                                                                                                      │"
"│  took 0.000s                                                                                                         │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
" model.lp  │  6 entries                                                           j/k:scroll · w:write .txt · Esc:close "
