tui/src/snapshots/lp_diff__snapshot_tests__snapshot_inspect_summary_80x24.snap
---
source: tui/src/snapshot_tests.rs
expression: "render(&mut app, 80, 24).backend()"
---
" 1 Sum │ 2 Vars (2) │ 3 Cons (2) │ 4 Objs (1) │ 5 Num !1                        "
"╭ Overview ────────┬ Summary ──────────────────────────────────────────────────╮"
"│  Variables      2│  model.lp                                                 ┃"
"│  Constraints    2│  Name:   (unnamed)                                        ┃"
"│  Objectives     1│  Sense:  Minimize                                         ┃"
"│                  │                                                           ┃"
"│                  │  Model Contents ─────────────────────────────────────     ┃"
"│                  │  Variables                2                               ┃"
"│                  │  Constraints              2                               │"
"│                  │  Objectives               1                               │"
"│                  │                                                           │"
"│                  │  Problem Dimensions ─────────────────────────────────     │"
"│                  │  Variables                      2                         │"
"│                  │  Constraints                    2                         │"
"│                  │  Non-zeros                      4                         │"
"│                  │  Density                100.0000%                         │"
"│                  │  Vars/constraint              2–2                         │"
"│                  │                                                           │"
"│                  │  Variable Types ─────────────────────────────────────     │"
"│                  │  Binary                         0                         │"
"│                  │  Integer                        0                         │"
"│                  │  General                        0                         │"
"╰──────────────────┴───────────────────────────────────────────────────────────╯"
" model.lp  │  5 entries       1-5:section · S:solve · w:csv · /:search · ?:help "
