tui/src/snapshots/lp_diff__snapshot_tests__snapshot_inspect_variables_80x24.snap
---
source: tui/src/snapshot_tests.rs
expression: "render(&mut app, 80, 24).backend()"
---
" 1 Sum │ 2 Vars (2) │ 3 Cons (2) │ 4 Objs (1) │ 5 Num !1                        "
"╭ 1/2 variables ───┬ Variable: x ──────────────────────────────────────────────╮"
"│▍ x               │  Type:   Continuous                                       │"
"│  y               │  Lower:  0                                                │"
"│                  │  Upper:  10                                               │"
"│                  │  Range:  10                                               │"
"│                  │                                                           │"
"│                  │                                                           │"
"│                  │                                                           │"
"│                  │                                                           │"
"│                  │                                                           │"
"│                  │                                                           │"
"│                  │                                                           │"
"│                  │                                                           │"
"│                  │                                                           │"
"│                  │                                                           │"
"│                  │                                                           │"
"│                  │                                                           │"
"│                  │                                                           │"
"│                  │                                                           │"
"│                  │                                                           │"
"│                  │                                                           │"
"╰──────────────────┴───────────────────────────────────────────────────────────╯"
" model.lp  │  2 variables          y:yank · w:csv · S:solve · /:search · ?:help "
